test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 16 Feb 2026 03:20:59 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="B7FwbzDhSRQHBRQUO2rYv87OXTMgFZ86", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}